bugfix: login was not centered in iOS

--- a/src/scss/_centered-box.scss
+++ b/src/scss/_centered-box.scss
@@ -1,5 +1,6 @@
 
 @mixin syn-box-centered {
+  // scss-lint:disable VendorPrefix
   position: absolute;
   width: 100%;
   top: 50%;
@@ -7,4 +8,5 @@
   left: 0;
   margin: auto;
   transform: translateY( -50% );
+  -webkit-transform: translateY( -50% );
 }
