--- a/src/scss/_syn-auth-login-form.scss
+++ b/src/scss/_syn-auth-login-form.scss
@@ -68,7 +68,6 @@ syn-auth-login-form {
     width: 100%;
     height: $syn-auth-login-footer-height;
     bottom: 0;
-    background: #000;
     font-size: $syn-auth-login-footer-fz;
     color: $c-brand-fg;
     text-align: center;
